--- a/download.html
+++ b/download.html
@@ -7,9 +7,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Roboto&display=swap" rel="stylesheet">
   <link rel="icon" sizes="180x180" href="https://i.ibb.co/2Ym0rBwB/apple-touch-icon.png">
   <style>
-  html {
-  scroll-behavior: smooth;
-}
+    html {
+      scroll-behavior: smooth;
+    }
+
     body {
       font-family: 'Roboto', sans-serif;
       margin: 0;
@@ -23,7 +24,6 @@
       color: #000;
     }
 
-    /* NEW: wraps entire site */
     .site-wrapper {
       max-width: 800px;
       width: 100%;
@@ -47,81 +47,105 @@
       justify-content: space-between;
       flex-wrap: wrap;
     }
-header{position: relative;}
+
+    header {
+      position: relative;
+    }
+
     .logo-section {
       display: flex;
       align-items: center;
       gap: 10px;
-    
     }
-    .logo-section img{
-     // background:red;
-      padding: 0px;
+
+    .logo-section img {
+      padding: 0;
       margin: 0;
       scale: 1.1;
     }
+
     .toggle-section {
       font-size: 18px;
       cursor: pointer;
       position: absolute;
-  top: 50%;
-  right: 20px;           /* tweak as needed */
-  transform: translateY(-50%);
- 
+      top: 50%;
+      right: 20px;
+      transform: translateY(-50%);
     }
 
     header img {
       height: 50px;
       border-radius: 4px;
     }
-.loader {
-  border: 6px solid #f3f3f3;
-  border-top: 6px solid #007bff;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  animation: spin 1s linear infinite;
-  margin: 50px auto;
-}
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+    .loader {
+      border: 6px solid #f3f3f3;
+      border-top: 6px solid #007bff;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      margin: 50px auto;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+.fade-out {
+  opacity: 0;
+  transition: opacity 0.6s ease;
+  pointer-events: none;
 }
-.game-card:before {
-    content: "Mod";
-    position: absolute;
-    top: 0px;
-    right: -32px;
-    width: 75px;
-    text-align: center;
-    transform: rotate(45deg);
-    background: darkorange;
-    padding: 8px 12px;
-    color: white;
-    font-size: 12px;
-    font-weight: 600;
-    text-align: center;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.25);
-}
-    .light-mode .game-card {
-      background: white;
+    .page-title {
+      font-family: 'Orbitron', sans-serif;
+      margin-bottom: 5px;
+      font-size: 28px;
+    }
+
+    .breadcrumbs {
+      font-size: 14px;
+      color: #aaa;
+      margin-bottom: 20px;
+    }
+
+    .light-mode .breadcrumbs {
+      color: #666;
+    }
+
+    .content-box {
+      background: #1e1e1e;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+      transition: background 0.3s, color 0.3s;
+    }
+
+    .light-mode .content-box {
+      background: #ffffff;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+
+    .green-yellow-button {
+      display: inline-block;
+      background: linear-gradient(to right, #a8ff78, #78ffd6);
       color: #000;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-weight: bold;
+      text-decoration: none;
+      margin-top: 10px;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
 
-    .game-card img {
-      width: 170px;
-      height: 170px;
-      margin-right: 2px;
-      object-fit: cover;
-      border-radius: 8px;
+    .green-yellow-button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     }
- 
- .green-yellow-button:hover {
-  transform: scale(1.05);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-}
-footer{text-align: center}
+
+    footer {
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -132,76 +156,121 @@ footer{text-align: center}
           <img src="https://i.ibb.co/vxv6Bn2y/Picsart-25-05-15-22-23-06-229.png" alt="Logo" />
         </div>
         <div class="toggle-section" onclick="toggleDarkMode()" id="themeToggle">
-  <svg id="themeIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-    <!-- Moon icon for dark mode -->
-    <path d="M21.64 13.3A9 9 0 1110.7 2.36 7 7 0 0021.64 13.3z"/>
-  </svg>
-</div>
+          <svg id="themeIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+            <!-- Moon icon for dark mode -->
+            <path d="M21.64 13.3A9 9 0 1110.7 2.36 7 7 0 0021.64 13.3z"/>
+          </svg>
+        </div>
       </div>
     </header>
 
     <div class="container" id="mainContainer">
+      <div class="content-box">
+        <h2 class="page-title">Download Page</h2>
+        <div class="breadcrumbs">Home &gt; Game Overview &gt; Download Page</div>
+
         <div class="loader"></div>
-  
-  <h3>Preparing your download...</h3>
-  <p id="message">Please wait...</p>
+        <h3>Preparing your download...</h3>
+        <p id="message">Please wait...</p>
+      </div>
     </div>
-    <footer><span>&copy; 2025 <span style="color:#bfff00">GamesLand</span> - v1.0.2</span></footer>
-</div>
-  <script>
-  // #### dark theme toggle
-    const body = document.body;
-    const themeToggle = document.getElementById("themeToggle");
 
-    function setTheme(mode) {
-  const themeIcon = document.getElementById("themeIcon");
+    <footer>
+      <span>&copy; 2025 <span style="color:#bfff00">GamesLand</span> - v1.0.2</span>
+    </footer>
+  </div>
+<script>
+  // Dark theme toggle
+  const body = document.body;
+  const themeToggle = document.getElementById("themeToggle");
 
-  if (mode === "light") {
-    body.classList.add("light-mode");
-    themeIcon.innerHTML = `
-      <!-- Moon Icon (for switching to dark mode) -->
-      <path d="M21.64 13.3A9 9 0 1110.7 2.36 7 7 0 0021.64 13.3z" fill="currentColor"/>
-    `;
-  } else {
-    body.classList.remove("light-mode");
-    themeIcon.innerHTML = `
-      <!-- Sun Icon (for switching to light mode) -->
-      <circle cx="12" cy="12" r="5" stroke="currentColor" stroke-width="2" fill="none"/>
-      <path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"/>
-    `;
+  function setTheme(mode) {
+    const themeIcon = document.getElementById("themeIcon");
+
+    if (mode === "light") {
+      body.classList.add("light-mode");
+      themeIcon.innerHTML = `
+        <path d="M21.64 13.3A9 9 0 1110.7 2.36 7 7 0 0021.64 13.3z" fill="currentColor"/>
+      `;
+    } else {
+      body.classList.remove("light-mode");
+      themeIcon.innerHTML = `
+        <circle cx="12" cy="12" r="5" stroke="currentColor" stroke-width="2" fill="none"/>
+        <path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"/>
+      `;
+    }
+
+    localStorage.setItem("theme", mode);
   }
 
-  localStorage.setItem("theme", mode);
-}
+  function toggleDarkMode() {
+    const isLight = body.classList.contains("light-mode");
+    setTheme(isLight ? "dark" : "light");
+  }
 
-    function toggleDarkMode() {
-      const isLight = body.classList.contains("light-mode");
-      setTheme(isLight ? "dark" : "light");
-    }
+  const savedTheme = localStorage.getItem("theme") || "dark";
+  setTheme(savedTheme);
 
-    const savedTheme = localStorage.getItem("theme") || "dark";
-    setTheme(savedTheme);
- 
- // handle download files
-    const gameId = localStorage.getItem("selectedGame");
+  function getStoredGame() {
+    const stored = localStorage.getItem("selectedGame");
+    const timestamp = localStorage.getItem("selectedGameTimestamp");
 
-    const gameLinks = {
-      game1: "https://example.com/downloads/game1.apk",
-      game2: "https://example.com/downloads/game2.apk",
-      game3: "https://example.com/downloads/game3.apk"
-    };
+    if (!stored || !timestamp) return null;
 
-    if (gameId && gameLinks[gameId]) {
-      // Show the link
-      document.getElementById("message").innerHTML = `
-        <a href="${gameLinks[gameId]}" download>Click here to download your game</a>
-      `;
-      
-      // Optionally clear it
+    const now = Date.now();
+    const oneDay = 24 * 60 * 60 * 1000;
+
+    if (now - parseInt(timestamp, 10) > oneDay) {
       localStorage.removeItem("selectedGame");
-    } else {
-      document.getElementById("message").innerText = "No download found. Please try again.";
+      localStorage.removeItem("selectedGameTimestamp");
+      return null;
     }
-  </script>
+    return stored;
+  }
+
+  const gameId = getStoredGame();
+  const loader = document.querySelector('.loader');
+  const preparingText = document.querySelector('h3');
+
+  if (gameId) {
+    fetch("https://api.jsonbin.io/v3/b/68234c858561e97a50131282", {
+      headers: {
+        "X-Access-Key": "$2a$10$gSgfYlP3hTZUvhD66Vr0ReHzaQdcR/c0oi9rzQeM7/xDQb0pYfen2"
+      }
+    })
+    .then(response => response.json())
+    .then(data => {
+      const allGames = data.record;
+      const game = allGames.find(g => g.id === gameId);
+
+      loader.style.display = 'none';
+      preparingText.style.display = 'none';
+
+      if (game) {
+        document.getElementById("message").innerHTML = `
+          <h4>${game.name}</h4>
+          <p>${game.description || ''}</p>
+          <a href="${game.download}" class="green-yellow-button" download>Click here to download</a>
+        `;
+      } else {
+        document.getElementById("message").innerText = "Game not found.";
+      }
+    })
+    .catch(error => {
+      loader.style.display = 'none';
+      preparingText.style.display = 'none';
+      console.error("Error loading data:", error);
+      document.getElementById("message").innerText = "An error occurred while fetching game info.";
+    });
+  } else {
+    loader.classList.add('fade-out');
+preparingText.classList.add('fade-out');
+setTimeout(() => {
+  loader.style.display = 'none';
+  preparingText.style.display = 'none';
+}, 3000);
+    document.getElementById("message").innerText = "No download found. Please try again.";
+  }
+</script>
 </body>
 </html>
