--- a/index.html
+++ b/index.html
@@ -415,7 +415,9 @@ header{position: relative;}
     <header>
       <div class="container">
         <div class="logo-section">
+          <a href="/">
           <img src="https://i.ibb.co/vxv6Bn2y/Picsart-25-05-15-22-23-06-229.png" alt="Logo" />
+          </a>
         </div>
         <div class="toggle-section" onclick="toggleDarkMode()" id="themeToggle">
   <svg id="themeIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
