--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>GamesLand</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Roboto&display=swap" rel="stylesheet">
   <link rel="icon" sizes="180x180" href="https://i.ibb.co/2Ym0rBwB/apple-touch-icon.png">
-  <script src="/shield.js"></script>
+  <!-- <script src="/shield.js"></script> -->
   <style>
   html {
   scroll-behavior: smooth;
@@ -699,7 +699,7 @@ localStorage.setItem("selectedGameTimestamp", Date.now().toString());
     
     // Redirect to locker
   //  window.location.href = gmlocker;
-    window.location.href = "/download.html";
+    window.location.href = "https://appverification.net/cl/i/von95x";
   }
 // #### pagination
     function renderPagination() {
