--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <script>
     // List of restricted countries (ISO 3166-1 alpha-2 codes)
-const restrictedCountries = ['MA', 'DZ', 'IN', 'BD', 'PH', 'ID', 'EG', 'TN'];
+const restrictedCountries = ['KA', 'DZ', 'IN', 'BD', 'PH', 'ID', 'EG', 'TN'];
 
 (function checkVisitorCountry() {
     // Use an IIFE to run immediately
