--- a/download.html
+++ b/download.html
@@ -155,6 +155,14 @@
   margin: 0 auto 20px;
   line-height: 1.8;
 }
+ol,ul {
+      padding-left: 20px;
+    }
+    li {
+      margin-bottom: 12px;
+      text-align: left;
+      font-size: 1rem;
+    }
 .andsvg{
   width: 25px;
   height: 25px;
@@ -275,7 +283,17 @@
   const loader = document.querySelector('.loader');
   const preparingText = document.querySelector('h3');
   const loadingText = document.getElementById("message");
-
+  // stylish Mod Features
+function styleMods(text) {
+  // Split the text by newlines to get each line as an item
+  const lines = text.trim().split('\n').filter(line => line.trim() !== '');
+  
+  // Wrap each line with <li> tags
+  const listItems = lines.map(line => `<li>${line.trim()}</li>`).join('\n');
+  
+  // Wrap all list items inside <ul> tags
+  return `<ul>\n${listItems}\n</ul>`;
+}
   if (gameId) {
     fetch("https://api.jsonbin.io/v3/b/68234c858561e97a50131282", {
       headers: {
@@ -296,6 +314,8 @@
           <img src="${game.logoUrl}" alt="game-logo" />
           <h4>${game.name}</h4>
           <p>${game.description || ''}</p>
+          <h3>Mod Features:</h3>
+          ${styleMods(game.modFeatures ||'n/a')}
           <a href="${game.androidLink}" class="green-yellow-button"><svg version="1.1" class="andsvg" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
 <path d="m14.594 7.9062 1.5586-2.6992c0.027344-0.046875 0.046875-0.10156 0.046875-0.16406 0-0.17969-0.14844-0.32422-0.32422-0.32422-0.12109 0-0.22656 0.066406-0.28125 0.16016v0.003906l-1.582 2.7344c-1.1797-0.54297-2.5586-0.85938-4.0117-0.85938s-2.832 0.31641-4.0703 0.88281l0.058593-0.023437-1.5781-2.7383c-0.058594-0.097656-0.16016-0.16016-0.28125-0.16016-0.17969 0-0.32422 0.14453-0.32422 0.32422 0 0.058593 0.015624 0.11328 0.042968 0.16406v-0.003906l1.5586 2.7031c-2.6758 1.4805-4.5195 4.1875-4.7734 7.3398l-0.003906 0.035156h18.746c-0.25781-3.1875-2.1016-5.8945-4.7344-7.3516zm-8.9062 4.7031c-0.43359 0-0.78125-0.34766-0.78125-0.78125 0-0.42969 0.34766-0.78125 0.78125-0.78125 0.42969 0 0.78125 0.35156 0.78125 0.78125-0.003906 0.43359-0.35156 0.78125-0.78125 0.78125zm8.625 0c-0.42969 0-0.78125-0.34766-0.78125-0.78125 0-0.42969 0.35156-0.78125 0.78125-0.78125 0.43359 0 0.78125 0.35156 0.78125 0.78125 0 0.43359-0.34766 0.78125-0.78125 0.78125z"/>
 </svg>
