--- a/index.html
+++ b/index.html
@@ -471,14 +471,14 @@ header{position: relative;}
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.8);
+      background-color: rgba(0, 0, 0, 0.6);
       display: flex;
       justify-content: center;
       align-items: center;
-      background: inherit;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px); /* Safari */
-  z-index: 0;
+     /* background: inherit;*/
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  z-index: 1;
     }
 
     .popup {
@@ -490,7 +490,7 @@ header{position: relative;}
       width: 85%;
       box-shadow: 0 0 20px rgba(255, 255, 255, 0.2), 0 0 10px rgba(0, 0, 0, 0.5);
       border: 1px solid #999;
-      z-index: 1000;
+      z-index: 1;
     }
 
     .popup img {
