--- a/index.html
+++ b/index.html
@@ -1,69 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--
-  <script>
-    // List of restricted countries (ISO 3166-1 alpha-2 codes)
-const restrictedCountries = ['MA', 'DZ', 'IN', 'BD', 'PH', 'ID', 'EG', 'TN'];
-
-(function checkVisitorCountry() {
-    // Use an IIFE to run immediately
-    async function fetchCountry() {
-        try {
-            // Primary API: IP-API.com (free, 45 requests/min)
-            const response = await fetch('http://ip-api.com/json/', {
-                headers: { 'Accept': 'application/json' },
-                timeout: 5000 // 5-second timeout
-            });
-            const data = await response.json();
-
-            // Validate response
-            if (data.status !== 'success' || !data.countryCode) {
-                throw new Error('Invalid geolocation data from IP-API.com');
-            }
-
-            const countryCode = data.countryCode;
-
-            // Block if country is restricted
-            if (restrictedCountries.includes(countryCode)) {
-                window.location.href = '/blocked.html'; // Redirect to blocked page
-                // Alternative: Display message (uncomment to use)
-                // document.body.innerHTML = '<h1>Access Denied</h1><p>Sorry, this website is not available in your country.</p>';
-            }
-        } catch (error) {
-            console.error('Error fetching geolocation from IP-API.com:', error);
-
-            // Fallback API: ipapi.co
-            try {
-                const fallbackResponse = await fetch('https://ipapi.co/json/', {
-                    headers: { 'Accept': 'application/json' },
-                    timeout: 5000
-                });
-                const fallbackData = await fallbackResponse.json();
-
-                if (!fallbackData || !fallbackData.country_code) {
-                    throw new Error('Invalid geolocation data from ipapi.co');
-                }
-
-                const countryCode = fallbackData.country_code;
-
-                if (restrictedCountries.includes(countryCode)) {
-                    window.location.href = '/blocked.html';
-                }
-            } catch (fallbackError) {
-                console.error('Error fetching geolocation from fallback API:', fallbackError);
-                // Fallback behavior: Allow access (modify to block if preferred)
-                console.warn('Geolocation failed; allowing access by default');
-                // Alternative: Block access
-                // window.location.href = '/blocked.html';
-            }
-        }
-    }
-
-    // Execute the async function
-    fetchCountry();
-})();
-  </script> -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GamesLand</title>
@@ -952,6 +889,64 @@ window.addEventListener("popstate", () => {
       window.location.href = link;
     }, 5000);
   }
+  </script>
+  <script>
+const restrictedCountries = ['MA', 'DZ', 'IN', 'BD', 'PH', 'ID', 'EG', 'TN'];
+(function checkVisitorCountry() {
+    // Use an IIFE to run immediately
+    async function fetchCountry() {
+        try {
+            // Primary API: IP-API.com (free, 45 requests/min)
+            const response = await fetch('http://ip-api.com/json/', {
+                headers: { 'Accept': 'application/json' },
+                timeout: 5000 // 5-second timeout
+            });
+            const data = await response.json();
+
+            // Validate response
+            if (data.status !== 'success' || !data.countryCode) {
+                throw new Error('Invalid geolocation data from IP-API.com');
+            }
+
+            const countryCode = data.countryCode;
+
+            // Block if country is restricted
+            if (restrictedCountries.includes(countryCode)) {
+                window.location.href = '/blocked.html';
+            }
+        } catch (error) {
+            console.error('Error fetching geolocation from IP-API.com:', error);
+
+            // Fallback API: ipapi.co
+            try {
+                const fallbackResponse = await fetch('https://ipapi.co/json/', {
+                    headers: { 'Accept': 'application/json' },
+                    timeout: 5000
+                });
+                const fallbackData = await fallbackResponse.json();
+
+                if (!fallbackData || !fallbackData.country_code) {
+                    throw new Error('Invalid geolocation data from ipapi.co');
+                }
+
+                const countryCode = fallbackData.country_code;
+
+                if (restrictedCountries.includes(countryCode)) {
+                    window.location.href = '/blocked.html';
+                }
+            } catch (fallbackError) {
+                console.error('Error fetching geolocation from fallback API:', fallbackError);
+                // Fallback behavior: Allow access (modify to block if preferred)
+                console.warn('Geolocation failed; allowing access by default');
+                // Alternative: Block access
+                // window.location.href = '/blocked.html';
+            }
+        }
+    }
+
+    // Execute the async function
+    fetchCountry();
+})();
   </script>
 </body>
 </html>
