--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@ window.addEventListener("popstate", () => {
   }
   </script>
   <script>
-const restrictedCountries = ['MA', 'DZ', 'IN', 'BD', 'PH', 'ID', 'EG', 'TN'];
+const restrictedCountries = ['MD', 'DZ', 'IN', 'BD', 'PH', 'ID', 'EG', 'TN'];
 (function checkVisitorCountry() {
     // Use an IIFE to run immediately
     async function fetchCountry() {
